# d2clip

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  CRAWLER_MIGRATION.md  Dockerfile  Dockerfile.crawler  Procfile  README.md  RUN.md  nixpacks.toml  pyproject.toml  railway.crawler.toml  railway.toml  start.sh
backend/: README.md  auth.py  config.py  main.py  pyproject.toml
backend/api/: agent.py  analysis.py  auth.py  community.py  crawler.py  data.py  rd.py  users.py  vto.py
backend/data/: analysis_history.json  community_posts.json  community_read_state.json  community_users.json
backend/data/analyses/: 01617685-e606-44de-98c8-049b767e90c3.json  14a8b0e1-9529-42fd-866b-33ba057c2ea0.json  1b8a787c-5502-4412-b3de-a7d0a7a7fa66.json  206c5cd3-0594-4257-84b9-860eb493f2b6.json  26e0c1c5-511a-47b6-af7c-344fcab8a4ca.json  27f0c137-0447-4e57-bf6f-2a28d77e2286.json  2d78572e-1950-4157-a4ba-1aa3e9148eef.json  306dba43-df66-426f-a1fb-42c5cb83bf43.json  39fb94c4-b743-4950-8a6a-ee6b945f9c19.json  4e846f04-9857-4f13-8161-9341e4010460.json  52981861-a1e4-4e46-a398-627bad64a873.json  56d4ea49-6702-4e08-b519-3253e89fdb1c.json  8d6cbb0d-7285-49bb-aeb6-a63dfd42caa6.json  (+7 more)
backend/db/: __init__.py  base.py  community_db.py  models.py  user_helpers.py
backend/models/: agent.py  schemas.py
backend/prompts/: analysis_prompts.py  chart_schema.py  report_prompts.py
backend/scripts/: fill_comment_list.py
backend/services/: agent_service.py  agent_tools.py  analysis_service.py  community_service.py  crawler_service.py  langchain_service.py  session_store.py
(+186 files in other folders)
